--- a/_includes/head.html
+++ b/_includes/head.html
@@ -243,11 +243,11 @@
 
   {% if page.layout == 'post' %}
   <!-- Post-specific CSS (post, lightbox, syntax) -->
-  <link rel="stylesheet" href="{{ '/assets/css/post.css' | relative_url }}?v={{ site.time | date: '%s' }}">
+  <link rel="stylesheet" href="{{ '/assets/css/post-page.css' | relative_url }}?v={{ site.time | date: '%s' }}">
   {% endif %}
   {% if page.url contains '/certifications' %}
   <!-- Certification page CSS -->
-  <link rel="stylesheet" href="{{ '/assets/css/certification.css' | relative_url }}?v={{ site.time | date: '%s' }}">
+  <link rel="stylesheet" href="{{ '/assets/css/cert-page.css' | relative_url }}?v={{ site.time | date: '%s' }}">
   {% endif %}
 
   <!-- Body loaded class for FOUC prevention -->
